[project]
name = "comfyui-utility-nodes"
description = "Utility custom nodes for ComfyUI"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/sters/comfyui-utility-nodes"

[tool.comfy]
PublisherId = "sters"
DisplayName = "ComfyUI Utility Nodes"
Icon = ""

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["nodes", "tests"]
explicit_package_bases = true

# ComfyUI-runtime-only modules — present when ComfyUI loads the pack, not in the
# offline test/lint env. Image nodes import them lazily inside methods.
[[tool.mypy.overrides]]
module = ["folder_paths", "PIL.*", "torch", "numpy", "comfy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
